--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ use_hide_code_button: true        # If True, a small button appears to the right
 show_sidebar: true                # Show the sidebar. Only set to false if your only wish to host a single page.
 collapse_inactive_chapters: true  # Whether to collapse the inactive chapters in the sidebar
 textbook_logo: images/logo/logo.png               # A logo to be displayed at the top of your textbook sidebar
-textbook_logo_link: https://jupyter.org/jupyter-book/                    # A link for the logo.
+textbook_logo_link: https://github.com/martin-hunt/hub_dev_guide                   # A link for the logo.
 sidebar_footer_text: Powered by <a href="https://github.com/jupyter/jupyter-book">Jupyter
   Book</a>
 number_toc_chapters: true         # Whether to add numbers to chapterse in your Table of Contents. If true, you can control this at the Chapter level in _data/toc.yml
@@ -67,11 +67,11 @@ binder_repo_branch: master                   # The branch on which your textbook
 binderhub_interact_text: Interact              # The text that interact buttons will contain.
 
 # Thebelab settings
-use_thebelab_button: true                # If 'true', display a button to allow in-page running code cells with Thebelab
+use_thebelab_button: false                # If 'true', display a button to allow in-page running code cells with Thebelab
 thebelab_button_text: Thebelab                 # The text to display inside the Thebelab initialization button
 
 # Download settings
-use_download_button: true                # If 'true', display a button to download a zip file for the notebook
+use_download_button: false                # If 'true', display a button to download a zip file for the notebook
 download_button_text: Download                # The text that download buttons will contain
 
 #######################################################################################
