--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -46,6 +46,9 @@
 - title: Overview
   url: /Overview/Overview
   expand_sections: true
+- title: Prerequisites
+  url: /Prerequisites/pre
+  expand_sections: true
 - title: Process
   url: /Process/process
   expand_sections: true
