--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -23,9 +23,18 @@
 
 # Top-level page
 - title: Home
-  url: /intro
+  url: /Overview/Overview
   not_numbered: true
-
+  expand_sections: true
+  sections: 
+  - title: Prerequisites
+    url: /Prerequisites/pre
+    not_numbered: true
+    expand_sections: true
+  - title: Process
+    url: /Process/process
+    expand_sections: true
+  
 # External link
 - title: GitHub repository
   url: https://github.com/jupyter/jupyter-book
@@ -43,15 +52,7 @@
 - header: Demo textbook
 
 # A chapter w/ a collection of sections beneath it
-- title: Overview
-  url: /Overview/Overview
-  expand_sections: true
-- title: Prerequisites
-  url: /Prerequisites/pre
-  expand_sections: true
-- title: Process
-  url: /Process/process
-  expand_sections: true
+
   
 #   sections:
 #   - title: Jupyter notebooks
