--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -22,18 +22,18 @@
 # See the links below for an example.
 
 # Top-level page
-- title: Home
+- title: Overview
   url: /Overview/Overview
   not_numbered: true
   expand_sections: true
-  sections: 
-  - title: Prerequisites
-    url: /Prerequisites/pre
-    not_numbered: true
-    expand_sections: true
-  - title: Process
-    url: /Process/process
-    expand_sections: true
+  
+- title: Prerequisites
+  url: /Prerequisites/pre
+  not_numbered: true
+  expand_sections: true
+- title: Process
+  url: /Process/process
+  expand_sections: true
   
 # External link
 - title: GitHub repository
