--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -28,33 +28,34 @@
   expand_sections: true
   
 - title: Prerequisites
-  url: /Prerequisites/pre
+  url: /Prerequisites/overview
   not_numbered: true
   expand_sections: true
+  sections:
+  - title: Accessing Your Home Directory
+    url: /Prerequisites/access
+    not_numbered: true
+    expand_sections: true
+    sections:
+    - title: SFTP
+      url: /Prerequisites/sftp
+      not_numbered: true
+      expand_sections: true
+    - title: WEBDAV
+      url: /Prerequisites/webdav
+      not_numbered: true
+      expand_sections: true
+  
 - title: Process
   url: /Process/process
+  not_numbered: true
   expand_sections: true
   
-# External link
-- title: GitHub repository
-  url: https://github.com/jupyter/jupyter-book
-  external: true
-  not_numbered: true
-
 # Adds a searchbar link
 - title: Search
   search: true
 
-# Divider for meta-pages and content page
-- divider: true
 
-# Add a header and sample content section
-- header: Demo textbook
 
-# A chapter w/ a collection of sections beneath it
 
   
-#   sections:
-#   - title: Jupyter notebooks
-#     url: /features/notebooks
-#     not_numbered: true
